--- a/config.yml
+++ b/config.yml
@@ -5,7 +5,7 @@ namespaces:
 - en
 - .us
 - github: .
-  name: my
+  name: ths
 # defaultKeyword: g 
-language: en
-country: us
+language: de
+country: de
