--- a/shortcuts.yml
+++ b/shortcuts.yml
@@ -11,3 +11,9 @@ examplekeyword 2:
   - example
 qw 1: https://www.qwant.com/?theme=-1&hc=0&hti=0&b=1&s=1&l=de&locale=de_DE&home=daily&q=<param1>&t=web
 mtg 1: https://metager.de/meta/meta.ger3?focus=web&eingabe=<query>&encoding=utf8&lang=all&mgv=d9de6f532f3c29bf1bb9a3a7adb472f1&ua=1
+ct 0: 
+  url: https://www.heise.de/download/
+  title: Heise Software Download
+ct 1: 
+  url: https://www.heise.de/select/ct/archiv/<param1>
+  title: c't Heftarchiv fürs angegebene Jahr (2024, ...)
