--- a/shortcuts.yml
+++ b/shortcuts.yml
@@ -15,5 +15,5 @@ ct 0:
   url: https://www.heise.de/download/
   title: Heise Software Download
 ct 1: 
-  url: https://www.heise.de/select/ct/archiv/<param1>
+  url: https://www.heise.de/select/ct/archiv/<year>
   title: c't Heftarchiv fürs angegebene Jahr (2024, ...)
