--- a/shortcuts.yml
+++ b/shortcuts.yml
@@ -23,3 +23,6 @@ dl 2:
 tel 1:
   url: https://www.dastelefonbuch.de/R%C3%BCckw%C3%A4rts-Suche/<Nummer>
   title: Telefonbuch, Suche mit Nummer
+cal 0:
+  url: https://calendar.google.com/
+  title: My Google calendar
